# learn-lab

./: .gitignore  .mcp.json  AGENTS.md  index.html
docs/: index.html
docs/1_langchain_langgraph_fast_track/: index.html
docs/1_langchain_langgraph_fast_track/examples/: AGENTS.md  app.py  graph.py
docs/1_langchain_langgraph_fast_track/examples/static/: index.html
docs/assets/: magic-code.css  magic-code.js  slides.css  slides.js
docs/langchain_langgraph_fast_track/: index.html
docs/langchain_langgraph_fast_track/examples/: README.md  model.py
docs/langchain_langgraph_fast_track/examples/static/: index.html
examples/: AGENTS.md  pyproject.toml
examples/simple_agent_graph/: agent.py  app.py  requirements.txt
examples/simple_chain/: app.py  chain.py  requirements.txt
examples/simple_graph/: app.py  graph.py
